fix: e2e 테스트 오류 수정 및 데이터베이스 설정 완료
- e2e 테스트 실행 시 발생하던 오류 수정
- Docker 환경의 MySQL 데이터베이스 연결 설정 완료
- 스키마 및 테스트 데이터 적용 스크립트 추가
  * reset_test_db.bat: Windows용 초기화 스크립트
  * reset_test_db.sh: Linux/Mac용 초기화 스크립트
- 한글 문자 인코딩 문제 해결
  * SQL 파일 UTF-8 인코딩으로 변환
  * MySQL 연결 시 --default-character-set=utf8mb4 옵션 추가
  * 데이터베이스 생성 시 CHARACTER SET utf8mb4 설정
- 테스트 데이터 외래키 제약조건 관련 이슈 해결
  * 데이터 삽입 시 외래키 체크 비활성화 설정 추가